--- a/lma.ipynb
+++ b/lma.ipynb
@@ -5,7 +5,7 @@
    "id": "4758d1bc",
    "metadata": {},
    "source": [
-    "# LMA: Levenberg-Marquardt Algorithm Operator\n",
+    "# LMA: Levenberg-Marquardt Algorithm\n",
     "\n",
     "The `LMA` operator implements the Levenberg-Marquardt algorithm, an iterative procedure widely used for solving non-linear least squares problems or for finding roots of non-linear systems of equations. This implementation is designed to be robust, but at the same time provides sensible defaults to facilitate its usage.\n",
     "\n",
@@ -198,7 +198,19 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre class=\"language-APL\">Exported: # → \"C:\\Users\\34696\\jupyter\\lma\"\n",
+       "</pre>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "]link.export -overwrite # ."
    ]
@@ -238,12 +250,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000  1.00000  2.00000 3.00000  4.00000  5.00000  6.00000 7.00000  8.00000  9.00000│\n",
-       "│ 10.91764  6.99509  4.61949 3.33679  2.30358  1.77714  1.47851 1.33376  1.14604  1.07627│\n",
-       "│ 11.00000  7.06531  4.67879 3.23130  2.35335  1.82085  1.49787 1.30197  1.18316  1.11109│\n",
-       "│ ¯0.08236 ¯0.07022 ¯0.05930 0.10549 ¯0.04977 ¯0.04371 ¯0.01936 0.03178 ¯0.03712 ¯0.03482│\n",
-       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000 1.00000 2.00000  3.00000 4.00000 5.00000  6.00000  7.00000  8.00000 9.00000│\n",
+       "│ 11.04618 7.18745 4.75584  3.11226 2.38049 1.85042  1.47419  1.19638  1.14017 1.21392│\n",
+       "│ 11.00000 7.06531 4.67879  3.23130 2.35335 1.82085  1.49787  1.30197  1.18316 1.11109│\n",
+       "│  0.04618 0.12214 0.07705 ¯0.11904 0.02713 0.02957 ¯0.02368 ¯0.10560 ¯0.04299 0.10283│\n",
+       "└─────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -254,9 +266,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
-       "│6│0.02174417066│8.497795557E¯16│0.000319999999│9.927861624 0.4955205482 0.9755915254│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
+       "│7│0.0517214021│1.058007892E¯16│0.000063999999│10.10148479 0.4980300575 0.9783122596│\n",
+       "└─┴────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -267,14 +279,15 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   4.9987E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.3674E1      2.5942E¯1     1.0000E0      6.5178E0    3.7706E¯1   2.5427E0   \n",
-       "      2   2.2937E¯1     2.4951E¯1     2.0000E¯1     9.7223E0    5.4644E¯1   1.1462E0   \n",
-       "      3   2.6436E¯2     6.5197E¯4     4.0000E¯2     9.9110E0    4.9302E¯1   9.9055E¯1  \n",
-       "      4   2.1744E¯2     5.1652E¯6     8.0000E¯3     9.9278E0    4.9551E¯1   9.7558E¯1  \n",
-       "      5   2.1744E¯2     2.8373E¯11    1.6000E¯3     9.9279E0    4.9552E¯1   9.7559E¯1  \n",
-       "      6   2.1744E¯2     8.4978E¯16    3.2000E¯4     9.9279E0    4.9552E¯1   9.7559E¯1  \n",
-       " s: 2.1744E¯2    p: 9.9279E0    4.9552E¯1   9.7559E¯1\n",
+       "<pre class=\"language-APL\">      0   5.2297E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.5775E1      2.8029E¯1     1.0000E0      6.5375E0    3.8418E¯1   2.6531E0   \n",
+       "      2   3.0420E¯1     2.7309E¯1     2.0000E¯1     9.9061E0    5.5359E¯1   1.1507E0   \n",
+       "      3   5.9205E¯2     5.9773E¯4     4.0000E¯2     1.0081E1    4.9374E¯1   9.9139E¯1  \n",
+       "      4   5.1722E¯2     5.6509E¯6     8.0000E¯3     1.0101E1    4.9811E¯1   9.7874E¯1  \n",
+       "      5   5.1721E¯2     2.1831E¯9     1.6000E¯3     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
+       "      6   5.1721E¯2     2.9992E¯13    3.2000E¯4     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
+       "      7   5.1721E¯2     1.0580E¯16    6.4000E¯5     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
+       " s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
        "</pre>"
       ]
      },
@@ -284,10 +297,10 @@
     }
    ],
    "source": [
-    "FN←{A k C←⍺ ⋄ C+A×*-k×⍵} ⋄ _EV_←{A k C←⍵ ⋄ xe←A×⍺⍺×e←*-k×⍺⍺ ⋄ (⍵⍵-⍵ FN ⍺⍺)(⍉(-e)⍪xe⍪⍉⍪-=⍨e)}\n",
-    "p←10 0.5 1 ⋄ y←0.25 NOISY p FN x←(⍳10)-1 ⋄ ExpDecay←{x y←⍺ ⋄ x _EV_ y⊢⍵} ⋄ ⊂5⍕↑x y(p FN x)(⊃x y ExpDecay p)\n",
-    "1e6 ⎕CT ⎕CT 1e¯2 1e¯2 5(÷5)(÷⎕CT)⎕CT(x y∘ExpDecay)LM⊢1(5 0.1 0.5) ⍝ ti ts tr tg d0 di dd dx dn\n",
-    "⊢s←x y ExpDecay LMA(5 0.1 0.5)(verbose:1)"
+    "ExpDec←{A k C←⍺ ⋄ C+A×*-k×⍵} ⋄ ExpDecEv←{x y←⍺ ⋄ A k C←⍵ ⋄ xe←A×x×e←*-k×x ⋄ (y-⍵ ExpDec x)(⍉(-e)⍪xe⍪⍉⍪-=⍨e)}\n",
+    "p←10 0.5 1 ⋄ y←0.25 NOISY p ExpDec x←(⍳10)-1 ⋄ ⊂5⍕↑x y(p ExpDec x)(⊃x y ExpDecEv p)\n",
+    "1e6 ⎕CT ⎕CT 1e¯2 1e¯2 5(÷5)(÷⎕CT)⎕CT(x y∘ExpDecEv)LM⊢1(5 0.1 0.5) ⍝ ti ts tr tg d0 di dd dx dn\n",
+    "⊢s←x y ExpDecEv LMA(5 0.1 0.5)(verbose:1)"
    ]
   },
   {
@@ -299,7 +312,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.1744E¯2    p: 9.9279E0    4.9552E¯1   9.7559E¯1\n",
+       "<pre class=\"language-APL\"> s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
        "</pre>"
       ]
      },
@@ -310,7 +323,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 2.1744E¯2    p: 9.9279E0    4.9552E¯1   9.7559E¯1\n",
+       "<pre class=\"language-APL\"> s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
        "</pre>"
       ]
      },
@@ -320,7 +333,7 @@
     }
    ],
    "source": [
-    "⊢ed←x y ExpDecay LMA⊂5 0.1 0.5\n",
+    "⊢ed←x y ExpDecEv LMA⊂5 0.1 0.5\n",
     "ed LMA ed.p0"
    ]
   },
@@ -342,10 +355,10 @@
      "data": {
       "text/html": [
        "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000  1.00000 2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│  0.09982  2.09961 4.10034 6.10013  8.09951 10.10008 12.09979 14.10037 16.09996 18.09973│\n",
-       "│  0.10000  2.10000 4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ ¯0.00018 ¯0.00039 0.00034 0.00013 ¯0.00049  0.00008 ¯0.00021  0.00037 ¯0.00004 ¯0.00027│\n",
+       "│  0.00000 1.00000  2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│  0.09955 2.10001  4.09961 6.10025  8.09966 10.09988 12.09964 14.10045 16.09967 18.10002│\n",
+       "│  0.10000 2.10000  4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ ¯0.00045 0.00001 ¯0.00039 0.00025 ¯0.00034 ¯0.00012 ¯0.00036  0.00045 ¯0.00033  0.00002│\n",
        "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
@@ -364,13 +377,13 @@
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
        "      5   1.1581E3      3.4300E¯10    1.0001E12     9.0999E¯10  2.0158E¯10 \n",
        "      6   1.1581E3      3.4300E¯7     1.0000E9      9.1090E¯7   2.0178E¯7  \n",
-       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1072E¯4   2.0175E¯4  \n",
+       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1072E¯4   2.0174E¯4  \n",
        "      8   8.4794E2      2.6756E¯1     1.0000E3      7.5750E¯1   1.7256E¯1  \n",
-       "      9   3.2732E¯1     9.9961E¯1     1.0000E0      3.8699E¯1   1.9370E0   \n",
-       "     10   7.6470E¯7     2.2137E¯2     1.0000E¯3     9.9919E¯2   2.0000E0   \n",
-       "     11   7.6346E¯7     1.0033E¯10    1.0000E¯6     9.9899E¯2   2.0000E0   \n",
-       "     12   7.6346E¯7     4.1135E¯25    9.9900E¯10    9.9899E¯2   2.0000E0   \n",
-       " s: 7.6346E¯7    p: 9.9899E¯2   2.0000E0\n",
+       "      9   3.2734E¯1     9.9961E¯1     1.0000E0      3.8686E¯1   1.9370E0   \n",
+       "     10   7.6873E¯7     2.2139E¯2     1.0000E¯3     9.9774E¯2   2.0000E0   \n",
+       "     11   7.6749E¯7     1.0034E¯10    1.0000E¯6     9.9754E¯2   2.0000E0   \n",
+       "     12   7.6749E¯7     4.1119E¯25    9.9900E¯10    9.9754E¯2   2.0000E0   \n",
+       " s: 7.6749E¯7    p: 9.9754E¯2   2.0000E0\n",
        "</pre>"
       ]
      },
@@ -380,10 +393,9 @@
     }
    ],
    "source": [
-    "FN←{a b←⍺ ⋄ a+b×⍵} ⋄ _EV_←{a b←⍵ ⋄ (⍵⍵-⍵ FN ⍺⍺)(⍉↑-(=⍨⍺⍺)⍺⍺)}\n",
-    "p←0.1 2 ⋄ y←1e¯3 NOISY p FN x←(⍳10)-1\n",
-    "Linear←x _EV_ y ⋄ ⊂5⍕↑x y(p FN x)(⊃Linear p)\n",
-    "Linear LMA(0 0)(dinc:1e3 ⋄ verbose:1)"
+    "Linear←{a b←⍺ ⋄ a+b×⍵} ⋄ LinearEv←{(y-⍵ Linear x)(⍉↑-(=⍨x)x)}\n",
+    "p←0.1 2 ⋄ y←1e¯3 NOISY p Linear x←(⍳10)-1 ⋄ ⊂5⍕↑x y(p Linear x)(⊃LinearEv p)\n",
+    "LinearEv LMA(0 0)(dinc:1e3 ⋄ verbose:1)"
    ]
   },
   {
@@ -399,7 +411,7 @@
    "execution_count": 9,
    "id": "f4008b0f",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -459,12 +471,12 @@
     }
    ],
    "source": [
-    "X←{m s←⍺ ⋄ *-(×⍨⍵-m)÷(2××⍨s)} ⋄ FN←{a s m c←⍺ ⋄ c+a×m s X ⍵}\n",
-    "_EV_←{a s m c←⍵ ⋄ xe←m s X ⍺⍺ ⋄ x1←xe×a×(⍺⍺-m)÷×⍨s ⋄ x2←x1×(⍺⍺-m)÷s ⋄ (⍵⍵-⍵ FN ⍺⍺)(⍉↑(-xe)x1(-x2)(-=⍨xe))}\n",
-    "p←10 5 1.5 2 ⋄ y←0 NOISY p FN x←(⍳10)-1 ⋄ Gaussian←{x y←⍺ ⋄ (x _EV_ y)⍵} ⋄ ⊂5⍕↑x y(p FN x)(⊃x y Gaussian p)\n",
-    "(x y Gaussian LMA(8 4 1 1)(dini:1e¯3 ⋄ tols:1e¯6)).(iter sse rel dnorm p)\n",
-    "(x y Gaussian LMA(8 4 1 1)1e¯1(tols:1e¯6)).(iter sse rel dnorm p)\n",
-    "(x y Gaussian LMA(8 4.5 1.2 1.5)(tolr:1e¯3)).(iter sse rel dnorm p)"
+    "Gauss←{a s m c←⍺ ⋄ c+a×m s X ⍵} ⋄ X←{m s←⍺ ⋄ *-(×⍨⍵-m)÷(2××⍨s)}\n",
+    "GaussEv←{x y←⍺ ⋄ a s m c←⍵ ⋄ x2←(x1←(xe←m s X x)×a×(x-m)÷×⍨s)×(x-m)÷s ⋄ (y-⍵ Gauss x)(⍉↑(-xe)x1(-x2)(-=⍨xe))}\n",
+    "p←10 5 1.5 2 ⋄ y←0 NOISY p Gauss x←(⍳10)-1 ⋄ ⊂5⍕↑x y(p Gauss x)(⊃x y GaussEv p)\n",
+    "(x y GaussEv LMA(8 4 1 1)(dini:1e¯3 ⋄ tols:1e¯6)).(iter sse rel dnorm p)\n",
+    "(x y GaussEv LMA(8 4 1 1)1e¯1(tols:1e¯6)).(iter sse rel dnorm p)\n",
+    "(x y GaussEv LMA(8 4.5 1.2 1.5)(tolr:1e¯3)).(iter sse rel dnorm p)"
    ]
   }
  ],
