silence link.export

--- a/lma.ipynb
+++ b/lma.ipynb
@@ -198,21 +198,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre class=\"language-APL\">Exported: # → \"C:\\Users\\34696\\jupyter\\lma\"\n",
-       "</pre>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "]link.export -overwrite # ."
+    "] _←link.export -overwrite # ."
    ]
   },
   {
@@ -250,12 +238,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000 1.00000 2.00000  3.00000 4.00000 5.00000  6.00000  7.00000  8.00000 9.00000│\n",
-       "│ 11.04618 7.18745 4.75584  3.11226 2.38049 1.85042  1.47419  1.19638  1.14017 1.21392│\n",
-       "│ 11.00000 7.06531 4.67879  3.23130 2.35335 1.82085  1.49787  1.30197  1.18316 1.11109│\n",
-       "│  0.04618 0.12214 0.07705 ¯0.11904 0.02713 0.02957 ¯0.02368 ¯0.10560 ¯0.04299 0.10283│\n",
-       "└─────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000 1.00000  2.00000 3.00000 4.00000 5.00000  6.00000  7.00000 8.00000 9.00000│\n",
+       "│ 10.97091 7.18066  4.60885 3.25186 2.43513 1.90501  1.39782  1.21954 1.24383 1.15156│\n",
+       "│ 11.00000 7.06531  4.67879 3.23130 2.35335 1.82085  1.49787  1.30197 1.18316 1.11109│\n",
+       "│ ¯0.02909 0.11535 ¯0.06994 0.02056 0.08178 0.08416 ¯0.10005 ¯0.08243 0.06068 0.04047│\n",
+       "└────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -266,9 +254,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
-       "│7│0.0517214021│1.058007892E¯16│0.000063999999│10.10148479 0.4980300575 0.9783122596│\n",
-       "└─┴────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
+       "│6│0.05223784966│3.580368475E¯15│0.000319999999│10.00246591 0.4948004948 0.9919925616│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -279,15 +267,14 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   5.2297E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.5775E1      2.8029E¯1     1.0000E0      6.5375E0    3.8418E¯1   2.6531E0   \n",
-       "      2   3.0420E¯1     2.7309E¯1     2.0000E¯1     9.9061E0    5.5359E¯1   1.1507E0   \n",
-       "      3   5.9205E¯2     5.9773E¯4     4.0000E¯2     1.0081E1    4.9374E¯1   9.9139E¯1  \n",
-       "      4   5.1722E¯2     5.6509E¯6     8.0000E¯3     1.0101E1    4.9811E¯1   9.7874E¯1  \n",
-       "      5   5.1721E¯2     2.1831E¯9     1.6000E¯3     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
-       "      6   5.1721E¯2     2.9992E¯13    3.2000E¯4     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
-       "      7   5.1721E¯2     1.0580E¯16    6.4000E¯5     1.0101E1    4.9803E¯1   9.7831E¯1  \n",
-       " s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
+       "<pre class=\"language-APL\">      0   5.0828E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.4288E1      2.7139E¯1     1.0000E0      6.5415E0    3.7978E¯1   2.5978E0   \n",
+       "      2   2.7593E¯1     2.5627E¯1     2.0000E¯1     9.8040E0    5.4726E¯1   1.1623E0   \n",
+       "      3   5.7963E¯2     6.1478E¯4     4.0000E¯2     9.9842E0    4.9150E¯1   1.0058E0   \n",
+       "      4   5.2238E¯2     5.1968E¯6     8.0000E¯3     1.0002E1    4.9482E¯1   9.9216E¯1  \n",
+       "      5   5.2238E¯2     3.6933E¯10    1.6000E¯3     1.0002E1    4.9480E¯1   9.9199E¯1  \n",
+       "      6   5.2238E¯2     3.5804E¯15    3.2000E¯4     1.0002E1    4.9480E¯1   9.9199E¯1  \n",
+       " s: 5.2238E¯2    p: 1.0002E1    4.9480E¯1   9.9199E¯1\n",
        "</pre>"
       ]
      },
@@ -312,7 +299,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
+       "<pre class=\"language-APL\"> s: 5.2238E¯2    p: 1.0002E1    4.9480E¯1   9.9199E¯1\n",
        "</pre>"
       ]
      },
@@ -323,7 +310,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 5.1721E¯2    p: 1.0101E1    4.9803E¯1   9.7831E¯1\n",
+       "<pre class=\"language-APL\"> s: 5.2238E¯2    p: 1.0002E1    4.9480E¯1   9.9199E¯1\n",
        "</pre>"
       ]
      },
@@ -354,12 +341,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000 1.00000  2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│  0.09955 2.10001  4.09961 6.10025  8.09966 10.09988 12.09964 14.10045 16.09967 18.10002│\n",
-       "│  0.10000 2.10000  4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ ¯0.00045 0.00001 ¯0.00039 0.00025 ¯0.00034 ¯0.00012 ¯0.00036  0.00045 ¯0.00033  0.00002│\n",
-       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│ 0.00000  1.00000  2.00000  3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│ 0.10018  2.09979  4.09988  6.09959  8.09982 10.10034 12.10030 14.10044 16.10003 18.09955│\n",
+       "│ 0.10000  2.10000  4.10000  6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ 0.00018 ¯0.00021 ¯0.00012 ¯0.00041 ¯0.00018  0.00034  0.00030  0.00044  0.00003 ¯0.00045│\n",
+       "└─────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -375,15 +362,15 @@
        "      2   1.1581E3      0.0000E0      1.0000E3      0.0000E0    0.0000E0   \n",
        "      3   1.1581E3      0.0000E0      1.0000E6      0.0000E0    0.0000E0   \n",
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
-       "      5   1.1581E3      3.4300E¯10    1.0001E12     9.0999E¯10  2.0158E¯10 \n",
-       "      6   1.1581E3      3.4300E¯7     1.0000E9      9.1090E¯7   2.0178E¯7  \n",
-       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1072E¯4   2.0174E¯4  \n",
-       "      8   8.4794E2      2.6756E¯1     1.0000E3      7.5750E¯1   1.7256E¯1  \n",
-       "      9   3.2734E¯1     9.9961E¯1     1.0000E0      3.8686E¯1   1.9370E0   \n",
-       "     10   7.6873E¯7     2.2139E¯2     1.0000E¯3     9.9774E¯2   2.0000E0   \n",
-       "     11   7.6749E¯7     1.0034E¯10    1.0000E¯6     9.9754E¯2   2.0000E0   \n",
-       "     12   7.6749E¯7     4.1119E¯25    9.9900E¯10    9.9754E¯2   2.0000E0   \n",
-       " s: 7.6749E¯7    p: 9.9754E¯2   2.0000E0\n",
+       "      5   1.1581E3      3.4300E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
+       "      6   1.1581E3      3.4300E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
+       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0175E¯4  \n",
+       "      8   8.4795E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
+       "      9   3.2732E¯1     9.9961E¯1     1.0000E0      3.8705E¯1   1.9370E0   \n",
+       "     10   8.9558E¯7     2.2137E¯2     1.0000E¯3     9.9972E¯2   2.0000E0   \n",
+       "     11   8.9435E¯7     1.0033E¯10    1.0000E¯6     9.9953E¯2   2.0000E0   \n",
+       "     12   8.9435E¯7     4.1120E¯25    9.9900E¯10    9.9953E¯2   2.0000E0   \n",
+       " s: 8.9435E¯7    p: 9.9953E¯2   2.0000E0\n",
        "</pre>"
       ]
      },
