--- a/lma.ipynb
+++ b/lma.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "]dinput\n",
-    "TEST←{\n",
+    "Test←{\n",
     "    t←()\n",
     "    ⍝ Tests ability to navigate sharp, narrow valleys and handle situations where the Jacobian\n",
     "    ⍝ may lead to a locally rank-deficient J^T J matrix (eg. zero diagonal elements), requiring\n",
@@ -297,7 +297,7 @@
        "               6 5.2183E¯20  1 1.440675763E¯10 2.281540488E¯10\n",
        "              10 1.9392E¯19  1 2.777180849E¯10 4.398273865E¯10\n",
        "Linear    \n",
-       "               1 2.0761E¯24  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 1.0633E¯24  1 2 3 4 5 6 7 8 9 10\n",
        "Powell    \n",
        "              99 9.8312E¯31  2.241601808E¯8 ¯2.241601808E¯9 1.446057221E¯8 1.446057221E¯8\n",
        "Rosenbrock\n",
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "TEST⍬"
+    "Test⍬"
    ]
   },
   {
@@ -327,7 +327,7 @@
    },
    "outputs": [],
    "source": [
-    "] _←link.export -overwrite # ."
+    "] _←link.export -overwrite # APLSource"
    ]
   },
   {
@@ -365,12 +365,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌───────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000 1.00000 2.00000  3.00000  4.00000  5.00000 6.00000  7.00000  8.00000  9.00000│\n",
-       "│ 11.01861 7.19012 4.77791  3.11043  2.33043  1.76756 1.51736  1.20900  1.07427  1.05704│\n",
-       "│ 11.00000 7.06531 4.67879  3.23130  2.35335  1.82085 1.49787  1.30197  1.18316  1.11109│\n",
-       "│  0.01861 0.12482 0.09912 ¯0.12087 ¯0.02292 ¯0.05329 0.01949 ¯0.09297 ¯0.10889 ¯0.05405│\n",
-       "└───────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000  1.00000  2.00000  3.00000  4.00000  5.00000 6.00000  7.00000 8.00000  9.00000│\n",
+       "│ 10.94547  7.05061  4.59793  3.18980  2.34178  1.76096 1.53529  1.19600 1.30357  1.07781│\n",
+       "│ 11.00000  7.06531  4.67879  3.23130  2.35335  1.82085 1.49787  1.30197 1.18316  1.11109│\n",
+       "│ ¯0.05453 ¯0.01470 ¯0.08087 ¯0.04150 ¯0.01157 ¯0.05989 0.03742 ¯0.10597 0.12042 ¯0.03328│\n",
+       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -381,9 +381,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
-       "│7│0.03453832684│7.036535114E¯18│0.000063999999│10.15179496 0.4883983267 0.8978220236│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬────────────────────────────────────┐\n",
+       "│6│0.03321113066│1.019252733E¯15│0.000319999999│9.949643431 0.5056800179 1.009071215│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -394,15 +394,14 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   5.2909E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.5117E1      2.7862E¯1     1.0000E0      6.6111E0    3.8531E¯1   2.5883E0   \n",
-       "      2   2.6248E¯1     2.7269E¯1     2.0000E¯1     9.9841E0    5.3837E¯1   1.0440E0   \n",
-       "      3   3.9677E¯2     4.2822E¯4     4.0000E¯2     1.0134E1    4.8520E¯1   9.1005E¯1  \n",
-       "      4   3.4538E¯2     4.4472E¯6     8.0000E¯3     1.0152E1    4.8844E¯1   8.9806E¯1  \n",
-       "      5   3.4538E¯2     6.7924E¯10    1.6000E¯3     1.0152E1    4.8840E¯1   8.9782E¯1  \n",
-       "      6   3.4538E¯2     4.1892E¯14    3.2000E¯4     1.0152E1    4.8840E¯1   8.9782E¯1  \n",
-       "      7   3.4538E¯2     7.0365E¯18    6.4000E¯5     1.0152E1    4.8840E¯1   8.9782E¯1  \n",
-       " s: 3.4538E¯2    p: 1.0152E1    4.8840E¯1   8.9782E¯1\n",
+       "<pre class=\"language-APL\">      0   5.0519E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.5024E1      2.6252E¯1     1.0000E0      6.4606E0    3.7876E¯1   2.6024E0   \n",
+       "      2   2.7492E¯1     2.5946E¯1     2.0000E¯1     9.7212E0    5.6239E¯1   1.2027E0   \n",
+       "      3   4.0330E¯2     8.2287E¯4     4.0000E¯2     9.9301E0    5.0182E¯1   1.0241E0   \n",
+       "      4   3.3211E¯2     6.1408E¯6     8.0000E¯3     9.9495E0    5.0570E¯1   1.0092E0   \n",
+       "      5   3.3211E¯2     4.2114E¯10    1.6000E¯3     9.9496E0    5.0568E¯1   1.0091E0   \n",
+       "      6   3.3211E¯2     1.0193E¯15    3.2000E¯4     9.9496E0    5.0568E¯1   1.0091E0   \n",
+       " s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
        "</pre>"
       ]
      },
@@ -427,7 +426,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 3.4538E¯2    p: 1.0152E1    4.8840E¯1   8.9782E¯1\n",
+       "<pre class=\"language-APL\"> s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
        "</pre>"
       ]
      },
@@ -438,7 +437,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 3.4538E¯2    p: 1.0152E1    4.8840E¯1   8.9782E¯1\n",
+       "<pre class=\"language-APL\"> s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
        "</pre>"
       ]
      },
@@ -471,9 +470,9 @@
       "text/html": [
        "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
        "│  0.00000 1.00000  2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│  0.09969 2.10011  4.09953 6.10025  8.09987 10.10034 12.10043 14.10029 16.10014 18.09978│\n",
+       "│  0.09981 2.10006  4.09996 6.10017  8.09978 10.10028 12.10041 14.09998 16.09988 18.09971│\n",
        "│  0.10000 2.10000  4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ ¯0.00031 0.00011 ¯0.00047 0.00025 ¯0.00013  0.00034  0.00043  0.00029  0.00014 ¯0.00022│\n",
+       "│ ¯0.00019 0.00006 ¯0.00004 0.00017 ¯0.00022  0.00028  0.00041 ¯0.00002 ¯0.00012 ¯0.00029│\n",
        "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
@@ -490,15 +489,15 @@
        "      2   1.1581E3      0.0000E0      1.0000E3      0.0000E0    0.0000E0   \n",
        "      3   1.1581E3      0.0000E0      1.0000E6      0.0000E0    0.0000E0   \n",
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
-       "      5   1.1581E3      3.4300E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
-       "      6   1.1581E3      3.4300E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
+       "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
+       "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
        "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0175E¯4  \n",
-       "      8   8.4796E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7257E¯1  \n",
-       "      9   3.2733E¯1     9.9961E¯1     1.0000E0      3.8698E¯1   1.9371E0   \n",
-       "     10   7.4757E¯7     2.2138E¯2     1.0000E¯3     9.9903E¯2   2.0000E0   \n",
-       "     11   7.4633E¯7     1.0033E¯10    1.0000E¯6     9.9883E¯2   2.0000E0   \n",
-       "     12   7.4633E¯7     4.1137E¯25    9.9900E¯10    9.9883E¯2   2.0000E0   \n",
-       " s: 7.4633E¯7    p: 9.9883E¯2   2.0000E0\n",
+       "      8   8.4795E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
+       "      9   3.2731E¯1     9.9961E¯1     1.0000E0      3.8712E¯1   1.9370E0   \n",
+       "     10   4.6995E¯7     2.2136E¯2     1.0000E¯3     1.0005E¯1   2.0000E0   \n",
+       "     11   4.6872E¯7     1.0033E¯10    1.0000E¯6     1.0003E¯1   2.0000E0   \n",
+       "     12   4.6872E¯7     4.1122E¯25    9.9900E¯10    1.0003E¯1   2.0000E0   \n",
+       " s: 4.6872E¯7    p: 1.0003E¯1   2.0000E0\n",
        "</pre>"
       ]
      },
