--- a/lma.ipynb
+++ b/lma.ipynb
@@ -222,10 +222,17 @@
     "    ⍝ Tests ability to navigate sharp, narrow valleys and handle situations where the Jacobian\n",
     "    ⍝ may lead to a locally rank-deficient J^T J matrix (eg. zero diagonal elements), requiring\n",
     "    ⍝ robust damping\n",
-    "    t.Beale←{\n",
-    "        s←R{\n",
+    "    t.Beale←{⎕CT←1e¯10\n",
+    "        B←{\n",
     "            x y←⍵ ⋄ (1.5 2.25 2.625-x×1-y*⍳3)[(¯1+y)x ⋄ (¯1+y*2)(2×x×y) ⋄ (¯1+y*3)(3×x×y*2)]\n",
-    "        }#.LMA(1 1)1e¯6 ⋄ 3 0.5 CMP s.p\n",
+    "        }\n",
+    "        r←3 0.5 CMP(R B #.LMA 1 0.8).p                                ⍝ easy\n",
+    "        r,←3 0.5 CMP(R B #.LMA 1 1).p                                 ⍝ singular Jt J\n",
+    "        r,←3 0.5 CMP(R B #.LMA 0 0).p                                 ⍝ another tricky point\n",
+    "        r,←3 0.5 CMP(R B #.LMA 1 ¯2).p                                ⍝ different quadrant\n",
+    "        r,←(B #.LMA(2 2)(toli:1)).sse>(R B #.LMA 2 2).sse             ⍝ closer to another local minimum\n",
+    "        r,←(B #.LMA(¯1 1)(toli:1)).sse>(R B #.LMA ¯1 1).sse           ⍝ closer to another local minimum\n",
+    "        r\n",
     "    }\n",
     "    ⍝ Assesses capability to follow a long, narrow, curving multi-dimensional valley, testing\n",
     "    ⍝ the interplay between step length and direction adjustments controlled by the damping factor\n",
@@ -235,45 +242,55 @@
     "            a b c←⍵ ⋄ m←a M b ⋄ y←(10×c-10×a T b)(10×m-1)c\n",
     "            y[((50×b)÷○+.×⍨a b)(-(50×a)÷○+.×⍨a b)10 ⋄ (10×a÷m)(10×b÷m)0 ⋄ 0 0 1]\n",
     "        }\n",
-    "        r←1 0 0 CMP(R H #.LMA¯1 0 0).p\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯1.2 0.1 0.1).p\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯0.9 ¯0.05 ¯0.05).p\n",
-    "        r,←1 0 0 CMP(R H #.LMA 0.5 0.5 0.5).p\n",
-    "        r,←1 0 0 CMP(R H #.LMA¯0.5 ¯0.5 ¯0.5).p\n",
+    "        r←1 0 0 CMP(R H #.LMA¯1 0 0).p                                ⍝ standard starting point\n",
+    "        r,←1 0 0 CMP(R H #.LMA¯1.2 0.1 0.1).p                         ⍝ slightly perturbed\n",
+    "        r,←1 0 0 CMP(R H #.LMA¯0.9 ¯0.05 ¯0.05).p                     ⍝ in other direction\n",
+    "        r,←1 0 0 CMP(R H #.LMA 0.5 ¯0.5 0.5).p                        ⍝ qualitatively different\n",
+    "        r,←1 0 0 CMP(R H #.LMA¯0.5 0.5 ¯0.5).p                        ⍝ another one\n",
+    "        r,←1 0 0 CMP(R H #.LMA¯1 0 10).p                              ⍝ far off in 3rd dimension\n",
+    "        r,←1 0 0 CMP(R H #.LMA¯1 0 ¯10).p                             ⍝ far off in 3rd dimension\n",
+    "        r,←1 0 0 CMP(R H #.LMA 3 4 5).p                               ⍝ away in all components\n",
     "        r\n",
     "    }\n",
     "    ⍝ Verifies efficiency and correctness for a linear system. Converge shoud be very fast\n",
     "    ⍝ (1 or 2 iterations) with minimal damping, demonstrating Gauss-Newton like behavior\n",
     "    t.Linear←{\n",
-    "        y←(A←?100 10⍴0)+.×x←⍳10 ⋄ s←R{(y-⍨A+.×⍵)A}#.LMA(?10⍴0)0 ⋄ (s.iter<10),(⍳10)CMP s.p\n",
+    "        y←(A←?100 10⍴0)+.×x←⍳10 ⋄ s←R{(y-⍨A+.×⍵)A}#.LMA(?10⍴0)0 ⋄ (1=s.iter),(⍳10)CMP s.p\n",
     "    }\n",
     "    ⍝ Evaluates LMA's robustness and ability to converge to a solution when the Jacobian\n",
     "    ⍝ becomes singular (rank-deficient) at or near the optimum\n",
     "    t.Powell←{\n",
-    "        s←R{a b c d←⍵ ⋄ r5 r10←5 10*÷2 ⋄ y←(a+10×b)(r5×c-d)(×⍨b-2×c)(r10××⍨a-d)\n",
+    "        P←{\n",
+    "            a b c d←⍵ ⋄ r5 r10←5 10*÷2 ⋄ y←(a+10×b)(r5×c-d)(×⍨b-2×c)(r10××⍨a-d)\n",
     "            y[1 10 0 0 ⋄ 0 0 r5(-r5) ⋄ 0(2×b-2×c)(-2×b-2×c)0 ⋄ (2×r10×a-d)0 0(-2×r10×a-d)]\n",
-    "        }#.LMA(3 ¯1 0 1)(tols:1e¯30) ⋄ (4⍴0)CMP s.p\n",
+    "        }\n",
+    "        r←(4⍴0)CMP(R P #.LMA(3 ¯1 0 1)(tolr:1e¯30)).p                 ⍝ standard starting point\n",
+    "        r,←(4⍴0)CMP(R P #.LMA(0 0 0 0)(tolr:1e¯30)).p                 ⍝ solution (convergence at zero step)\n",
+    "        r,←(4⍴0)CMP(R P #.LMA(1 1 1 1)(tolr:1e¯30)).p                 ⍝ far from solution\n",
+    "        r\n",
     "    }\n",
     "    ⍝ Tests LMA's performance in minimizing a classic non-linear function characterized by\n",
     "    ⍝ a deep, narrow, banana-shaped valley, requiring effective adaptation of search\n",
     "    ⍝ direction and step size\n",
     "    Rosenbrock←{p q←⍵ ⋄ ((10×q-×⍨p),1-p)[(-20×p)10 ⋄ ¯1 0]}\n",
     "    t.Rosenbrock←{\n",
-    "        s←R #.Rosenbrock #.LMA(0 0) ⋄ 1 1 CMP s.p\n",
+    "        r←1 1 CMP(R #.Rosenbrock #.LMA 1.5 1.5).p                     ⍝ close to the solution\n",
+    "        r,←1 1 CMP(R #.Rosenbrock #.LMA 2 1).p                        ⍝ not so close\n",
+    "        r,←1 1 CMP(R #.Rosenbrock #.LMA 0 0).p                        ⍝ outside of parabollic valley\n",
+    "        r,←1 1 CMP(R #.Rosenbrock #.LMA ¯1.2 1).p                     ⍝ further\n",
+    "        r,←1 1 CMP(R #.Rosenbrock #.LMA ¯2 ¯2).p                      ⍝ far and wrongly pointed gradient\n",
+    "        r,←1 1 CMP(R #.Rosenbrock #.LMA 2 2).p                        ⍝ far and wrongly pointed gradient\n",
+    "        r\n",
     "    }\n",
     "    ⍝ Check that algorithm finishes on termination conditions\n",
     "    t.Terminate←{\n",
-    "        ti tr←10 1e¯10\n",
-    "        r←(R #.Rosenbrock #.LMA(0 0)(tolr:0)).(iter>toli)               ⍝ number of iterations\n",
-    "        r,←(R #.Rosenbrock #.LMA(0 0)(tols:0)).(rel<tolr)               ⍝ relative change\n",
-    "        r,←(R #.Rosenbrock #.LMA(0 0)(tolr:0 ⋄ dmax:1e6)).(dnorm>1e6)   ⍝ maximum damping\n",
+    "        r←(R #.Rosenbrock #.LMA(0 0)(tolr:0)).(iter>toli)             ⍝ number of iterations\n",
+    "        r,←(R #.Rosenbrock #.LMA(0 0)(tols:0)).(rel<tolr)             ⍝ relative change\n",
+    "        r,←(R #.Rosenbrock #.LMA(0 0)(tolr:0 ⋄ dmax:1e6)).dnorm>1e6   ⍝ maximum damping\n",
     "        r\n",
     "    }\n",
-    "    fn←↓t.⎕NL 3\n",
-    "    ⍺←1e¯6 ⋄ tol←⍺ ⋄ CMP←{tol>|⍺-⍵}\n",
-    "    R←{⎕←(10↑''),⍵.((6 0⍕iter),(12 ¯5⍕sse),p) ⋄ ⍵}\n",
-    "    t←t ⎕NS'tol' 'CMP' 'R'\n",
-    "    {⎕←⍵ ⋄ 0∊t⍎⍵,'⍬':⎕SIGNAL 8 ⋄ _←0}¨fn\n",
+    "    ⍺←1e¯6 ⋄ tol←⍺ ⋄ CMP←{tol>|⍺-⍵} ⋄ R←{⎕←(10↑''),⍵.((6 0⍕iter),(12 ¯5⍕sse),p) ⋄ ⍵}\n",
+    "    (t ⎕NS'tol' 'CMP' 'R'){⎕←⍵ ⋄ 0∊⍺⍎⍵,'⍬':⎕SIGNAL 8 ⋄ _←0}¨↓t.⎕NL 3\n",
     "}"
    ]
   },
@@ -289,19 +306,34 @@
      "data": {
       "text/html": [
        "<pre class=\"language-APL\">Beale     \n",
-       "              18 6.8157E¯20  2.999999999 0.4999999998\n",
+       "               6 6.8539E¯21  3 0.4999999999\n",
+       "               9 2.9291E¯21  3 0.5\n",
+       "              32 6.2363E¯17  2.99999998 0.4999999949\n",
+       "               8 5.2033E¯19  3 0.5\n",
+       "             842 4.5211E¯1   ¯15356.11978 1.000064535\n",
+       "             840 4.5211E¯1   ¯15356.14972 1.000064535\n",
        "Helical   \n",
        "              10 1.1919E¯19  1 2.177303483E¯10 3.448140016E¯10\n",
        "              10 1.1846E¯19  1 2.170636163E¯10 3.437591012E¯10\n",
        "               8 4.6695E¯19  1 4.309357625E¯10 6.82517468E¯10\n",
-       "               6 5.2183E¯20  1 1.440675763E¯10 2.281540488E¯10\n",
-       "              10 1.9392E¯19  1 2.777180849E¯10 4.398273865E¯10\n",
+       "              14 4.6833E¯20  1 1.364817538E¯10 2.161410116E¯10\n",
+       "              12 1.5718E¯20  1 7.90691E¯11 1.252178359E¯10\n",
+       "              24 2.7419E¯20  1 1.044305611E¯10 1.65382662E¯10\n",
+       "              21 8.5502E¯15  1 5.82997047E¯8 9.234613263E¯8\n",
+       "              10 3.6281E¯20  1 1.201260465E¯10 1.902399678E¯10\n",
        "Linear    \n",
-       "               1 1.0633E¯24  1 2 3 4 5 6 7 8 9 10\n",
+       "               1 1.6153E¯24  1 2 3 4 5 6 7 8 9 10\n",
        "Powell    \n",
        "              99 9.8312E¯31  2.241601808E¯8 ¯2.241601808E¯9 1.446057221E¯8 1.446057221E¯8\n",
+       "               1 0.0000E0    0 0 0 0\n",
+       "              97 9.8174E¯31  ¯2.241693431E¯8 2.241693431E¯9 ¯1.445422286E¯8 ¯1.445422286E¯8\n",
        "Rosenbrock\n",
+       "               8 7.4732E¯15  1.000000086 1.00000017\n",
+       "              12 7.8195E¯15  1.000000088 1.000000174\n",
        "              32 5.1271E¯15  0.999999929 0.999999857\n",
+       "              28 4.8548E¯15  0.9999999309 0.9999998609\n",
+       "              18 5.1595E¯15  0.9999999287 0.9999998566\n",
+       "              14 8.0558E¯15  1.000000089 1.000000176\n",
        "Terminate \n",
        "            1001 0.0000E0    1 1\n",
        "              34 1.4249E¯29  1 1\n",
@@ -365,12 +397,12 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000  1.00000  2.00000  3.00000  4.00000  5.00000 6.00000  7.00000 8.00000  9.00000│\n",
-       "│ 10.94547  7.05061  4.59793  3.18980  2.34178  1.76096 1.53529  1.19600 1.30357  1.07781│\n",
-       "│ 11.00000  7.06531  4.67879  3.23130  2.35335  1.82085 1.49787  1.30197 1.18316  1.11109│\n",
-       "│ ¯0.05453 ¯0.01470 ¯0.08087 ¯0.04150 ¯0.01157 ¯0.05989 0.03742 ¯0.10597 0.12042 ¯0.03328│\n",
-       "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌──────────────────────────────────────────────────────────────────────────────────────┐\n",
+       "│  0.00000  1.00000  2.00000 3.00000 4.00000  5.00000 6.00000  7.00000  8.00000 9.00000│\n",
+       "│ 10.94049  6.98360  4.64838 3.32973 2.41963  1.78182 1.60779  1.19361  1.13762 1.13757│\n",
+       "│ 11.00000  7.06531  4.67879 3.23130 2.35335  1.82085 1.49787  1.30197  1.18316 1.11109│\n",
+       "│ ¯0.05951 ¯0.08171 ¯0.03041 0.09843 0.06628 ¯0.03903 0.10992 ¯0.10837 ¯0.04553 0.02648│\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -381,9 +413,9 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬────────────────────────────────────┐\n",
-       "│6│0.03321113066│1.019252733E¯15│0.000319999999│9.949643431 0.5056800179 1.009071215│\n",
-       "└─┴─────────────┴───────────────┴──────────────┴────────────────────────────────────┘\n",
+       "<pre class=\"language-APL\">┌─┬─────────────┬───────────────┬──────────────┬─────────────────────────────────────┐\n",
+       "│7│0.04405728821│4.241777557E¯18│0.000063999999│9.922581951 0.4929062121 0.9866677078│\n",
+       "└─┴─────────────┴───────────────┴──────────────┴─────────────────────────────────────┘\n",
        "</pre>"
       ]
      },
@@ -394,14 +426,15 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\">      0   5.0519E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
-       "      1   2.5024E1      2.6252E¯1     1.0000E0      6.4606E0    3.7876E¯1   2.6024E0   \n",
-       "      2   2.7492E¯1     2.5946E¯1     2.0000E¯1     9.7212E0    5.6239E¯1   1.2027E0   \n",
-       "      3   4.0330E¯2     8.2287E¯4     4.0000E¯2     9.9301E0    5.0182E¯1   1.0241E0   \n",
-       "      4   3.3211E¯2     6.1408E¯6     8.0000E¯3     9.9495E0    5.0570E¯1   1.0092E0   \n",
-       "      5   3.3211E¯2     4.2114E¯10    1.6000E¯3     9.9496E0    5.0568E¯1   1.0091E0   \n",
-       "      6   3.3211E¯2     1.0193E¯15    3.2000E¯4     9.9496E0    5.0568E¯1   1.0091E0   \n",
-       " s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
+       "<pre class=\"language-APL\">      0   4.9736E1      0.0000E0      1.0000E0      5.0000E0    1.0000E¯1   5.0000E¯1  \n",
+       "      1   2.3055E1      2.6129E¯1     1.0000E0      6.5492E0    3.7617E¯1   2.5307E0   \n",
+       "      2   2.3562E¯1     2.4292E¯1     2.0000E¯1     9.7229E0    5.4119E¯1   1.1487E0   \n",
+       "      3   4.7749E¯2     6.0274E¯4     4.0000E¯2     9.9071E0    4.9115E¯1   1.0020E0   \n",
+       "      4   4.4057E¯2     4.8241E¯6     8.0000E¯3     9.9226E0    4.9288E¯1   9.8659E¯1  \n",
+       "      5   4.4057E¯2     6.5408E¯11    1.6000E¯3     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
+       "      6   4.4057E¯2     1.9918E¯14    3.2000E¯4     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
+       "      7   4.4057E¯2     4.2418E¯18    6.4000E¯5     9.9226E0    4.9291E¯1   9.8667E¯1  \n",
+       " s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
        "</pre>"
       ]
      },
@@ -426,7 +459,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
+       "<pre class=\"language-APL\"> s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
        "</pre>"
       ]
      },
@@ -437,7 +470,7 @@
     {
      "data": {
       "text/html": [
-       "<pre class=\"language-APL\"> s: 3.3211E¯2    p: 9.9496E0    5.0568E¯1   1.0091E0\n",
+       "<pre class=\"language-APL\"> s: 4.4057E¯2    p: 9.9226E0    4.9291E¯1   9.8667E¯1\n",
        "</pre>"
       ]
      },
@@ -469,10 +502,10 @@
      "data": {
       "text/html": [
        "<pre class=\"language-APL\">┌────────────────────────────────────────────────────────────────────────────────────────┐\n",
-       "│  0.00000 1.00000  2.00000 3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
-       "│  0.09981 2.10006  4.09996 6.10017  8.09978 10.10028 12.10041 14.09998 16.09988 18.09971│\n",
-       "│  0.10000 2.10000  4.10000 6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
-       "│ ¯0.00019 0.00006 ¯0.00004 0.00017 ¯0.00022  0.00028  0.00041 ¯0.00002 ¯0.00012 ¯0.00029│\n",
+       "│ 0.00000 1.00000  2.00000  3.00000  4.00000  5.00000  6.00000  7.00000  8.00000  9.00000│\n",
+       "│ 0.10044 2.10034  4.09980  6.09978  8.09977 10.09965 12.09989 14.09998 16.10046 18.09962│\n",
+       "│ 0.10000 2.10000  4.10000  6.10000  8.10000 10.10000 12.10000 14.10000 16.10000 18.10000│\n",
+       "│ 0.00044 0.00034 ¯0.00020 ¯0.00022 ¯0.00023 ¯0.00035 ¯0.00011 ¯0.00002  0.00046 ¯0.00038│\n",
        "└────────────────────────────────────────────────────────────────────────────────────────┘\n",
        "</pre>"
       ]
@@ -491,13 +524,13 @@
        "      4   1.1581E3      0.0000E0      1.0000E9      0.0000E0    0.0000E0   \n",
        "      5   1.1581E3      3.4301E¯10    1.0001E12     9.1000E¯10  2.0158E¯10 \n",
        "      6   1.1581E3      3.4301E¯7     1.0000E9      9.1091E¯7   2.0178E¯7  \n",
-       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0175E¯4  \n",
-       "      8   8.4795E2      2.6756E¯1     1.0000E3      7.5751E¯1   1.7256E¯1  \n",
-       "      9   3.2731E¯1     9.9961E¯1     1.0000E0      3.8712E¯1   1.9370E0   \n",
-       "     10   4.6995E¯7     2.2136E¯2     1.0000E¯3     1.0005E¯1   2.0000E0   \n",
-       "     11   4.6872E¯7     1.0033E¯10    1.0000E¯6     1.0003E¯1   2.0000E0   \n",
-       "     12   4.6872E¯7     4.1122E¯25    9.9900E¯10    1.0003E¯1   2.0000E0   \n",
-       " s: 4.6872E¯7    p: 1.0003E¯1   2.0000E0\n",
+       "      7   1.1577E3      3.4291E¯4     1.0000E6      9.1073E¯4   2.0174E¯4  \n",
+       "      8   8.4794E2      2.6756E¯1     1.0000E3      7.5750E¯1   1.7256E¯1  \n",
+       "      9   3.2730E¯1     9.9961E¯1     1.0000E0      3.8720E¯1   1.9370E0   \n",
+       "     10   8.3918E¯7     2.2135E¯2     1.0000E¯3     1.0014E¯1   2.0000E0   \n",
+       "     11   8.3794E¯7     1.0033E¯10    1.0000E¯6     1.0012E¯1   2.0000E0   \n",
+       "     12   8.3794E¯7     4.1127E¯25    9.9900E¯10    1.0012E¯1   2.0000E0   \n",
+       " s: 8.3794E¯7    p: 1.0012E¯1   2.0000E0\n",
        "</pre>"
       ]
      },
@@ -592,14 +625,6 @@
     "(x y GaussEv LMA(8 4 1 1)1e¯1(tols:1e¯6)).(iter sse rel dnorm p)\n",
     "(x y GaussEv LMA(8 4.5 1.2 1.5)(tolr:1e¯3)).(iter sse rel dnorm p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "438d5bb8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
